<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite_restaurants"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favorite_restaurants" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tutorial" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />
        <item
            android:onClick="goToMapActivity"
            android:id="@+id/nav_map"
            android:icon="@drawable/common_google_signin_btn_icon_dark"
            android:title="@string/map" />

        <item
            android:onClick="goToMapSettingsActivity"
            android:id="@+id/nav_map_settings"
            android:icon="@drawable/common_google_signin_btn_icon_dark"
            android:title="@string/map_settings" />
    </group>
</menu>
