<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_favorite_restaurants">

    <fragment
        android:id="@+id/nav_favorite_restaurants"
        android:name="com.example.findrestaurants.ui.favorite_restaurants.FavoriteRestaurantsFragment"
        android:label="@string/favorite_restaursnts"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.example.findrestaurants.ui.tutorial.TutorialFragment"
        android:label="@string/tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.findrestaurants.ui.about_us.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>